@@ -1,20 +1,22 @@
 package gov.cms.dpc.aggregation.service;
 
-import ca.uhn.fhir.rest.client.api.IGenericClient;
+import gov.cms.dpc.common.jdbi.ConsentDAO;
+import gov.cms.dpc.common.consent.entities.ConsentEntity;
 import gov.cms.dpc.fhir.DPCIdentifierSystem;
+import gov.cms.dpc.fhir.converters.entities.ConsentEntityConverter;
 import jakarta.inject.Named;
-import org.hl7.fhir.dstu3.model.Bundle;
 import org.hl7.fhir.dstu3.model.Consent;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class ConsentServiceImpl implements ConsentService {
-    private final IGenericClient consentClient;
+    private final ConsentDAO consentDAO;
+    private final String fhirReferenceURL;
 
-    public ConsentServiceImpl(@Named("consentClient") IGenericClient consentClient){
-        this.consentClient = consentClient;
+    public ConsentServiceImpl(@Named("consentDAO") ConsentDAO consentDAO, @Named("fhirReferenceURL") String fhirReferenceURL) {
+        this.consentDAO = consentDAO;
+        this.fhirReferenceURL = fhirReferenceURL;
     }
 
     @Override
@@ -24,33 +26,26 @@ public class ConsentServiceImpl implements ConsentService {
 
     @Override
     public Optional<List<ConsentResult>> getConsent(List<String> mbis) {
-        final Bundle bundle = doConsentSearch(mbis);
+        final List<ConsentEntity> entities = doConsentSearch(mbis);
 
         return Optional.of(
-            bundle.getEntry().stream().map( entry -> {
-                Consent consent = (Consent) entry.getResource();
-
+            entities.stream().map( entity -> {
+                Consent consent = ConsentEntityConverter.toFhir(entity, fhirReferenceURL);
                 ConsentResult consentResult = new ConsentResult();
                 consentResult.setActive(Consent.ConsentState.ACTIVE.equals(consent.getStatus()));
                 consentResult.setConsentDate(consent.getDateTime());
                 consentResult.setConsentId(consent.getId());
                 consentResult.setPolicyType(ConsentResult.PolicyType.fromPolicyUrl(consent.getPolicyRule()));
                 return consentResult;
-            }).collect(Collectors.toList())
+            }).toList()
         );
     }
 
-    private Bundle doConsentSearch(List<String> mbis){
+    private List<ConsentEntity> doConsentSearch(List<String> mbis) {
         List<String> fullMbis = mbis.stream()
                 .map( mbi -> String.format("%s|%s", DPCIdentifierSystem.MBI.getSystem(), mbi) )
-                .collect(Collectors.toList());
+                .toList();
 
-        return consentClient
-            .search()
-            .forResource(Consent.class)
-            .encodedJson()
-            .returnBundle(Bundle.class)
-            .where(Consent.PATIENT.hasAnyOfIds(fullMbis))
-            .execute();
+        return this.consentDAO.findByMbis(fullMbis);
     }
 }
